--- a/resources/themes/theme-dark.scss
+++ b/resources/themes/theme-dark.scss
@@ -1,8 +1,8 @@
 /*-- scss:defaults --*/
 
 // Background colours
-$navbar-bg: #00A499;
-$footer-bg: #00A499 ;
+$navbar-bg:#009c92;
+$footer-bg: #009c92 ;
 
 // Code blocks
 $code-block-bg-alpha: -.8;
